# golang

./: .gitignore  LICENSE  README.md  go-grammar.txt  golang.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
src/Language/Go/: AST.hs  Bindings.hs  Desugar.hs  Parser.hs  Rec.hs  Rename.hs  Types.hs
src/Language/Go/Bindings/: Types.hs
src/Language/Go/Parser/: Ambiguous.y  Lexer.x  State.hs  Token.hs  Util.hs
