name:                golang
version:             0.1.0.0
synopsis:            A parser frontend for Go designed to be used with goblin.
description:
  This is a parser frontend for the Go programming language designed to be used
  with goblin.

  The abstract syntax and type definitions are in AST.hs and Types.hs,
  respectively. Rec.hs contains generic combinators for folding over the syntax.

  The frontend proceeds in three phases:

  * The JSON parser (Parser.hs) deserializes a JSON-encoded AST produced by
    goblin.
  * The desugaring pass (Desugar.hs) performs various (purely syntactic)
    transformations.
  * The renamer (Renamer.hs) fills in missing qualifiers so that all global
    identifiers become fully qualified.
license:             BSD3
license-file:        LICENSE
author:              Alex Bagnall
maintainer:          Alex Bagnall <abagnall@galois.com>, Tristan Ravitch <tristan@galois.com>
copyright:           (c) 2020-2021 Galois Inc.
tested-with:         GHC==8.6.5, GHC==8.8.4, GHC==8.10.4
homepage:            https://github.com/GaloisInc/golang
bug-reports:         https://github.com/GaloisInc/golang/issues
category:            Language
build-type:          Simple
cabal-version:       >=1.10

Source-repository head
   type: git
   location: git://github.com/GaloisInc/golang

Source-repository this
   type: git
   location: git://github.com/GaloisInc/golang
   tag: 0.1.0.0

library
  exposed-modules:     Language.Go.AST
                       Language.Go.Desugar
                       Language.Go.Parser
                       Language.Go.Rec
                       Language.Go.Rename
                       Language.Go.Types
  other-modules:
  build-depends:       base >= 4.9 && < 5
                     , mtl
                     , text >= 1.2
                     , aeson
                     , bytestring
                     , vector
                     , unordered-containers
                     , parameterized-utils
                     , data-default-class
  hs-source-dirs:      src
  ghc-options:       -Wall -fno-warn-orphans -Wno-unticked-promoted-constructors
  default-language:    Haskell2010
  Build-tools:
